# ucsc-ectf-pwns-2023

./: README.md
fau/discount-diffie-hellman/: features  features.c  hash  hash.c  random.c  random.h  unlock.sh  unlock_features.sh
fau/fob-buffer-overflow/: rop.bin.rzdb  stack.bin.rzdb
iitm/car2/: aa00  challenges.txt  get_response.nu  get_response.py  get_response.sh  replay.json  replay.py
iitm/reset_and_unlock/: Cargo.toml
iitm/unkeyed/: challenges.txt  get_response.py  get_response.sh
msu/car2/: replay.csv  replay.nu  replay.pvs  replay.sh  replay.sr  replay0.pvs  replay0.sr  replay1.pvs  replay1.sr  unlock0.pvs  unlock0.sr  unlock1.pvs  unlock1.sr  unlock2.pvs  unlock2.sr  unlock3.pvs  unlock3.sr
msu/timing_entropy_replay/: Cargo.toml
pairing_pin_bruteforce/: Cargo.toml
pairing_pin_bruteforce/iitm/: Cargo.toml
pairing_pin_bruteforce/msu/: Cargo.toml
pairing_pin_bruteforce/smu/: Cargo.toml  screenlog.0
pairing_pin_bruteforce/src/: main.rs
pairing_pin_bruteforce/template/: Cargo.toml
pairing_pin_bruteforce/ub/: Cargo.toml
purdue/: challenges.txt  replay.txt
purdue/car2/: modechange0.pvs  modechange0.sr  response.pvs  response.sr  unlock0.pvs  unlock0.sr  unlock1.pvs  unlock1.sr  unlock10.pvs  unlock10.sr  (+30 more)
tufts/: pin_rop.py
ub/car-buffer-overflow/malicious-paired-fob/: Cargo.toml  memory.x
ub/car-buffer-overflow/malicious-paired-fob/src/: main.rs
uci/: pin_brute_force.py  pin_brute_force.sh  unlock_brute_force.py
unlock_and_reset/: Cargo.toml
vt/: pin_rop.py
washington/: recv_with_acks.py  send_with_acks.py  send_with_acks.sh
(+77 files in other folders)
